--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "@ionic/react": "^5.2.3",
+    "ionicons": "^5.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   },
